# LLVMTest_GlobalVariableToLocal

./: CMakeLists.txt  PassTest.cpp  README.md
pass/GlobalVariableToLocal/src/: GlobalVariableToLocal.cpp
pass/GlobalVariableToLocal/test/: FuncLib.c  FuncLib.ll
